# Ocean

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Ocean.h  README.md  Win64-Build.bat  Win64-Debugger.bat  build.bat  debug.bat  ocean.sln  ocean.vcxproj  shell.bat
Core/: Assertion.h  Defines.h  EntryPoint.cpp  Forward.h  KeyCode.h  Log.cpp  Log.h  Types.h
Core/Encoding/: Utf8.cpp  Utf8.h
Core/Math/: Color.cpp  Color.h  MathUtils.h  Rect.h  Vector.h
Core/Memory/: Arena.cpp  Arena.h  MemoryOperations.cpp  MemoryOperations.h  MemorySpan.h
Draw/: Bitmap.cpp  Bitmap.h  Brush.h  Forward.h  Painter.cpp  Painter.h
Draw/Software/: SoftwareBitmap.cpp  SoftwareBrush.cpp
Editor/: Editor.cpp  Editor.h  Settings.cpp  Settings.h  State.h
Graphics/: DrawList.h  Font.cpp  Font.h  GraphicsContext.h
Graphics/Software/: SoftwareDrawList.cpp  SoftwareGraphicsContext.cpp  SoftwareGraphicsContext.h
Platform/: FileSystem.h  Input.h  Memory.h  OffscreenBitmap.h  SoftwareSwapchain.h  Window.h
Platform/Windows/: WindowsEntryPoint.h  WindowsFileSystem.cpp  WindowsHeaders.h  WindowsInput.cpp  WindowsMemory.cpp  WindowsOffscreenBitmap.cpp  WindowsSoftwareOffscreenBitmap.cpp  WindowsSoftwareSwapchain.cpp  WindowsWindow.cpp
source/: RCa16124  core.cpp  core.h  draw.cpp  draw.h  editor.cpp  editor.h  graphics.cpp  graphics.h  ocean.cpp  ocean.h  ocean.rc  ocean.res  ocean_.cpp  ocean_commands.cpp  ocean_math.h  ocean_text.h  ocean_windows.cpp  win32_ocean.cpp
